--- a/judgingapp/build.gradle
+++ b/judgingapp/build.gradle
@@ -28,9 +28,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.apache.commons:commons-csv:1.14.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation("com.opencsv:opencsv:5.12.0")
 	implementation group: 'es.ucm.fdi.gaia', name: 'jCOLIBRI', version: '3.2'
-	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
