--- a/judgingapp/src/main/resources/application.properties
+++ b/judgingapp/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=never
+
+csv.file.path=verdicts.csv
