--- a/judgingapp/build.gradle
+++ b/judgingapp/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.apache.commons:commons-csv:1.14.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'com.openai:openai-java:3.1.2'
 	implementation("com.opencsv:opencsv:5.12.0")
 	implementation group: 'es.ucm.fdi.gaia', name: 'jCOLIBRI', version: '3.2'
 	annotationProcessor 'org.projectlombok:lombok'
