--- a/judgingapp/src/main/resources/application.properties
+++ b/judgingapp/src/main/resources/application.properties
@@ -5,7 +5,11 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=never
-
 csv.file.path=verdicts.csv
+
+openai.api.key=PLACEHOLDER
